# granite-wxc

./: .gitignore  README.md  pyproject.toml
examples/granitewxc_downscaling/configs/: inference_config.yaml
examples/granitewxc_downscaling/notebooks/: granitewxc_downscaling_inference.ipynb
examples/granitewxc_downscaling/notebooks/climatology/: anomaly_variance_surface (1).nc
examples/granitewxc_downscaling/utils/: plot.py
granitewxc/: __init__.py
granitewxc/datasets/: merra2.py
granitewxc/decoders/: downscaling.py
granitewxc/models/: finetune_model.py
granitewxc/utils/: cache.py  config.py  data.py  distributed.py  downscaling_model.py
